# mousetweaks

./: config.h.meson  meson.build  meson_post_install.py
data/: meson.build
man/: meson.build
pixmaps/: meson.build
po/: Makevars  POTFILES  meson.build
src/: meson.build
